src/sketchon/cql_parser/cqlParser.py
# Generated from /Users/seantyh/langon/Sketchon/dep/../src/sketchon/cql_parser/cqlParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class cqlParser ( Parser ):

    grammarFileName = "cqlParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'|'", "'+'", "'?'", "'*'", 
                     "'.'", "<INVALID>", "'{'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "']'", "'-'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "PIPE", "PLUS", "QUESTION", 
                      "STAR", "WildcardEsc", "Char", "StartQuantity", "SingleCharEsc", 
                      "MultiCharEsc", "CatEsc", "ComplEsc", "NegCharGroup", 
                      "PosCharGroup", "EndQuantity", "QuantExact", "COMMA", 
                      "EndCategory", "IsCategory", "Letters", "Marks", "Numbers", 
                      "Punctuation", "Separators", "Symbols", "Others", 
                      "IsBlock", "NestedSingleCharEsc", "NestedMultiCharEsc", 
                      "NestedCatEsc", "NestedComplEsc", "NestedNegCharGroup", 
                      "NestedPosCharGroup", "EndCharGroup", "DASH", "XmlChar" ]

    RULE_root = 0
    RULE_regExp = 1
    RULE_branch = 2
    RULE_piece = 3
    RULE_quantifier = 4
    RULE_quantity = 5
    RULE_quantRange = 6
    RULE_quantMin = 7
    RULE_atom = 8
    RULE_charClass = 9
    RULE_charClassExpr = 10
    RULE_charGroup = 11
    RULE_posCharGroup = 12
    RULE_charRange = 13
    RULE_seRange = 14
    RULE_charOrEsc = 15
    RULE_charClassEsc = 16
    RULE_catEsc = 17
    RULE_complEsc = 18
    RULE_charProp = 19

    ruleNames =  [ "root", "regExp", "branch", "piece", "quantifier", "quantity", 
                   "quantRange", "quantMin", "atom", "charClass", "charClassExpr", 
                   "charGroup", "posCharGroup", "charRange", "seRange", 
                   "charOrEsc", "charClassEsc", "catEsc", "complEsc", "charProp" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    PIPE=3
    PLUS=4
    QUESTION=5
    STAR=6
    WildcardEsc=7
    Char=8
    StartQuantity=9
    SingleCharEsc=10
    MultiCharEsc=11
    CatEsc=12
    ComplEsc=13
    NegCharGroup=14
    PosCharGroup=15
    EndQuantity=16
    QuantExact=17
    COMMA=18
    EndCategory=19
    IsCategory=20
    Letters=21
    Marks=22
    Numbers=23
    Punctuation=24
    Separators=25
    Symbols=26
    Others=27
    IsBlock=28
    NestedSingleCharEsc=29
    NestedMultiCharEsc=30
    NestedCatEsc=31
    NestedComplEsc=32
    NestedNegCharGroup=33
    NestedPosCharGroup=34
    EndCharGroup=35
    DASH=36
    XmlChar=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regExp(self):
            return self.getTypedRuleContext(cqlParser.RegExpContext,0)


        def EOF(self):
            return self.getToken(cqlParser.EOF, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = cqlParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.regExp()
            self.state = 41
            self.match(cqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cqlParser.BranchContext)
            else:
                return self.getTypedRuleContext(cqlParser.BranchContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(cqlParser.PIPE)
            else:
                return self.getToken(cqlParser.PIPE, i)

        def getRuleIndex(self):
            return cqlParser.RULE_regExp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegExp" ):
                listener.enterRegExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegExp" ):
                listener.exitRegExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegExp" ):
                return visitor.visitRegExp(self)
            else:
                return visitor.visitChildren(self)




    def regExp(self):

        localctx = cqlParser.RegExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_regExp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.branch()
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cqlParser.PIPE:
                self.state = 44
                self.match(cqlParser.PIPE)
                self.state = 45
                self.branch()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BranchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def piece(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cqlParser.PieceContext)
            else:
                return self.getTypedRuleContext(cqlParser.PieceContext,i)


        def getRuleIndex(self):
            return cqlParser.RULE_branch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBranch" ):
                listener.enterBranch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBranch" ):
                listener.exitBranch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBranch" ):
                return visitor.visitBranch(self)
            else:
                return visitor.visitChildren(self)




    def branch(self):

        localctx = cqlParser.BranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_branch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cqlParser.LPAREN) | (1 << cqlParser.WildcardEsc) | (1 << cqlParser.Char) | (1 << cqlParser.SingleCharEsc) | (1 << cqlParser.MultiCharEsc) | (1 << cqlParser.CatEsc) | (1 << cqlParser.ComplEsc) | (1 << cqlParser.NegCharGroup) | (1 << cqlParser.PosCharGroup) | (1 << cqlParser.NestedSingleCharEsc) | (1 << cqlParser.NestedMultiCharEsc) | (1 << cqlParser.NestedCatEsc) | (1 << cqlParser.NestedComplEsc) | (1 << cqlParser.NestedNegCharGroup) | (1 << cqlParser.NestedPosCharGroup))) != 0):
                self.state = 51
                self.piece()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PieceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(cqlParser.AtomContext,0)


        def quantifier(self):
            return self.getTypedRuleContext(cqlParser.QuantifierContext,0)


        def getRuleIndex(self):
            return cqlParser.RULE_piece

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPiece" ):
                listener.enterPiece(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPiece" ):
                listener.exitPiece(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPiece" ):
                return visitor.visitPiece(self)
            else:
                return visitor.visitChildren(self)




    def piece(self):

        localctx = cqlParser.PieceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_piece)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.atom()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cqlParser.PLUS) | (1 << cqlParser.QUESTION) | (1 << cqlParser.STAR) | (1 << cqlParser.StartQuantity))) != 0):
                self.state = 58
                self.quantifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION(self):
            return self.getToken(cqlParser.QUESTION, 0)

        def STAR(self):
            return self.getToken(cqlParser.STAR, 0)

        def PLUS(self):
            return self.getToken(cqlParser.PLUS, 0)

        def StartQuantity(self):
            return self.getToken(cqlParser.StartQuantity, 0)

        def quantity(self):
            return self.getTypedRuleContext(cqlParser.QuantityContext,0)


        def EndQuantity(self):
            return self.getToken(cqlParser.EndQuantity, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_quantifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantifier" ):
                listener.enterQuantifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantifier" ):
                listener.exitQuantifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantifier" ):
                return visitor.visitQuantifier(self)
            else:
                return visitor.visitChildren(self)




    def quantifier(self):

        localctx = cqlParser.QuantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_quantifier)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cqlParser.QUESTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(cqlParser.QUESTION)
                pass
            elif token in [cqlParser.STAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(cqlParser.STAR)
                pass
            elif token in [cqlParser.PLUS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(cqlParser.PLUS)
                pass
            elif token in [cqlParser.StartQuantity]:
                self.enterOuterAlt(localctx, 4)
                self.state = 64
                self.match(cqlParser.StartQuantity)
                self.state = 65
                self.quantity()
                self.state = 66
                self.match(cqlParser.EndQuantity)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantRange(self):
            return self.getTypedRuleContext(cqlParser.QuantRangeContext,0)


        def quantMin(self):
            return self.getTypedRuleContext(cqlParser.QuantMinContext,0)


        def QuantExact(self):
            return self.getToken(cqlParser.QuantExact, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_quantity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantity" ):
                listener.enterQuantity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantity" ):
                listener.exitQuantity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantity" ):
                return visitor.visitQuantity(self)
            else:
                return visitor.visitChildren(self)




    def quantity(self):

        localctx = cqlParser.QuantityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_quantity)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.quantRange()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.quantMin()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(cqlParser.QuantExact)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantRangeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QuantExact(self, i:int=None):
            if i is None:
                return self.getTokens(cqlParser.QuantExact)
            else:
                return self.getToken(cqlParser.QuantExact, i)

        def COMMA(self):
            return self.getToken(cqlParser.COMMA, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_quantRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantRange" ):
                listener.enterQuantRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantRange" ):
                listener.exitQuantRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantRange" ):
                return visitor.visitQuantRange(self)
            else:
                return visitor.visitChildren(self)




    def quantRange(self):

        localctx = cqlParser.QuantRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quantRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(cqlParser.QuantExact)
            self.state = 76
            self.match(cqlParser.COMMA)
            self.state = 77
            self.match(cqlParser.QuantExact)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantMinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QuantExact(self):
            return self.getToken(cqlParser.QuantExact, 0)

        def COMMA(self):
            return self.getToken(cqlParser.COMMA, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_quantMin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantMin" ):
                listener.enterQuantMin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantMin" ):
                listener.exitQuantMin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantMin" ):
                return visitor.visitQuantMin(self)
            else:
                return visitor.visitChildren(self)




    def quantMin(self):

        localctx = cqlParser.QuantMinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_quantMin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(cqlParser.QuantExact)
            self.state = 80
            self.match(cqlParser.COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Char(self):
            return self.getToken(cqlParser.Char, 0)

        def charClass(self):
            return self.getTypedRuleContext(cqlParser.CharClassContext,0)


        def LPAREN(self):
            return self.getToken(cqlParser.LPAREN, 0)

        def regExp(self):
            return self.getTypedRuleContext(cqlParser.RegExpContext,0)


        def RPAREN(self):
            return self.getToken(cqlParser.RPAREN, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = cqlParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atom)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cqlParser.Char]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(cqlParser.Char)
                pass
            elif token in [cqlParser.WildcardEsc, cqlParser.SingleCharEsc, cqlParser.MultiCharEsc, cqlParser.CatEsc, cqlParser.ComplEsc, cqlParser.NegCharGroup, cqlParser.PosCharGroup, cqlParser.NestedSingleCharEsc, cqlParser.NestedMultiCharEsc, cqlParser.NestedCatEsc, cqlParser.NestedComplEsc, cqlParser.NestedNegCharGroup, cqlParser.NestedPosCharGroup]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.charClass()
                pass
            elif token in [cqlParser.LPAREN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(cqlParser.LPAREN)
                self.state = 85
                self.regExp()
                self.state = 86
                self.match(cqlParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def charClassEsc(self):
            return self.getTypedRuleContext(cqlParser.CharClassEscContext,0)


        def charClassExpr(self):
            return self.getTypedRuleContext(cqlParser.CharClassExprContext,0)


        def WildcardEsc(self):
            return self.getToken(cqlParser.WildcardEsc, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_charClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharClass" ):
                listener.enterCharClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharClass" ):
                listener.exitCharClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharClass" ):
                return visitor.visitCharClass(self)
            else:
                return visitor.visitChildren(self)




    def charClass(self):

        localctx = cqlParser.CharClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_charClass)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cqlParser.SingleCharEsc, cqlParser.MultiCharEsc, cqlParser.CatEsc, cqlParser.ComplEsc, cqlParser.NestedSingleCharEsc, cqlParser.NestedMultiCharEsc, cqlParser.NestedCatEsc, cqlParser.NestedComplEsc]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.charClassEsc()
                pass
            elif token in [cqlParser.NegCharGroup, cqlParser.PosCharGroup, cqlParser.NestedNegCharGroup, cqlParser.NestedPosCharGroup]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.charClassExpr()
                pass
            elif token in [cqlParser.WildcardEsc]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(cqlParser.WildcardEsc)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharClassExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def charGroup(self):
            return self.getTypedRuleContext(cqlParser.CharGroupContext,0)


        def EndCharGroup(self):
            return self.getToken(cqlParser.EndCharGroup, 0)

        def NegCharGroup(self):
            return self.getToken(cqlParser.NegCharGroup, 0)

        def NestedNegCharGroup(self):
            return self.getToken(cqlParser.NestedNegCharGroup, 0)

        def PosCharGroup(self):
            return self.getToken(cqlParser.PosCharGroup, 0)

        def NestedPosCharGroup(self):
            return self.getToken(cqlParser.NestedPosCharGroup, 0)

        def getRuleIndex(self):
            return cqlParser.RULE_charClassExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharClassExpr" ):
                listener.enterCharClassExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharClassExpr" ):
                listener.exitCharClassExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharClassExpr" ):
                return visitor.visitCharClassExpr(self)
            else:
                return visitor.visitChildren(self)




    def charClassExpr(self):

        localctx = cqlParser.CharClassExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_charClassExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cqlParser.NegCharGroup) | (1 << cqlParser.PosCharGroup) | (1 << cqlParser.NestedNegCharGroup) | (1 << cqlParser.NestedPosCharGroup))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 96
            self.charGroup()
            self.state = 97
            self.match(cqlParser.EndCharGroup)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharGroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self, i:int=None):
            if i is None:
                return self.getTokens(cqlParser.DASH)
            else:
                return self.getToken(cqlParser.DASH, i)

        def charClassExpr(self):
            return self.getTypedRuleContext(cqlParser.CharClassExprContext,0)


        def posCharGroup(self):
            return self.getTypedRuleContext(cqlParser.PosCharGroupContext,0)


        def getRuleIndex(self):
            return cqlParser.RULE_charGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharGroup" ):
                listener.enterCharGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharGroup" ):
                listener.exitCharGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharGroup" ):
                return visitor.visitCharGroup(self)
            else:
                return visitor.visitChildren(self)




    def charGroup(self):

        localctx = cqlParser.CharGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_charGroup)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.posCharGroup()


                self.state = 102
                self.match(cqlParser.DASH)
                self.state = 103
                self.match(cqlParser.DASH)
                self.state = 104
                self.charClassExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.posCharGroup()
                self.state = 106
                self.match(cqlParser.DASH)
                self.state = 107
                self.charClassExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.posCharGroup()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==cqlParser.DASH:
                    self.state = 110
                    self.match(cqlParser.DASH)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.match(cqlParser.DASH)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PosCharGroupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DASH(self):
            return self.getToken(cqlParser.DASH, 0)

        def charRange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cqlParser.CharRangeContext)
            else:
                return self.getTypedRuleContext(cqlParser.CharRangeContext,i)


        def charClassEsc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cqlParser.CharClassEscContext)
            else:
                return self.getTypedRuleContext(cqlParser.CharClassEscContext,i)


        def getRuleIndex(self):
            return cqlParser.RULE_posCharGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPosCharGroup" ):
                listener.enterPosCharGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPosCharGroup" ):
                listener.exitPosCharGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPosCharGroup" ):
                return visitor.visitPosCharGroup(self)
            else:
                return visitor.visitChildren(self)




    def posCharGroup(self):

        localctx = cqlParser.PosCharGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_posCharGroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==cqlParser.DASH:
                self.state = 116
                self.match(cqlParser.DASH)

